k8s/overlays/performance-managed-public/delete-mesh-security.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: analytics-service-allow-http
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: api-edge-proxy-allow-http
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: audit-service-allow-http
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: identity-access-service-allow-http
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingestion-service-allow-actuator-grpc
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: notification-service-allow-http
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: pond-service-allow-http-grpc
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: project-service-allow-http-grpc
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: realtime-gateway-allow-http-ws
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: sensor-service-allow-http-grpc
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: api-edge-proxy-permissive-ingress
$patch: delete
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
$patch: delete
